ci(commits): conventional commits validation

--- a/package.json
+++ b/package.json
@@ -12,13 +12,8 @@
     "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "npx prettier --write",
-      "npx eslint --fix"
-    ]
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -77,5 +72,9 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3"
+  }
 }
