--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/JOSEJESUSOCHOA"
   },
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Asset Mark Design System",
   "author": "Jose Jesus Ochoa Torres",
   "license": "MIT",
@@ -11,9 +11,11 @@
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "build-storybook": "build-storybook",
+    "build-tailwind-file": "NODE_ENV=production npx tailwindcss -o ./dist/tailwind.css --minify",
+    "build-library": "NODE_ENV=production npx tailwindcss -o ./dist/tailwind.css --minify && npm run rollup"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -33,6 +35,7 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.9",
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
@@ -42,6 +45,7 @@
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "autoprefixer": "^10.4.8",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "eslint": "^8.21.0",
@@ -57,7 +61,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^13.0.3",
-    "postcss": "^8",
+    "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "prettier-plugin-tailwind": "^2.2.12",
     "react": "^18.2.0",
@@ -67,6 +71,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "tailwindcss": "^3.1.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
